NetBSD Problem Report #42500

From www@NetBSD.org  Wed Dec 23 07:33:57 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4C17A63C430
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 23 Dec 2009 07:33:57 +0000 (UTC)
Message-Id: <20091223073357.1D0FE63C3A9@www.NetBSD.org>
Date: Wed, 23 Dec 2009 07:33:57 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced #endif in fdisk.c.
X-Send-Pr-Version: www-1.0

>Number:         42500
>Category:       bin
>Synopsis:       Misplaced #endif in fdisk.c.
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Dec 23 07:35:00 +0000 2009
>Closed-Date:    Wed Dec 23 18:51:25 +0000 2009
>Last-Modified:  Wed Dec 23 18:55:00 +0000 2009
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Misplaced #endif in fdisk.c .
>How-To-Repeat:

>Fix:
diff -u -r1.129 fdisk.c
--- sbin/fdisk/fdisk.c	22 Dec 2009 21:55:12 -0000	1.129
+++ sbin/fdisk/fdisk.c	23 Dec 2009 07:25:59 -0000
@@ -1174,6 +1174,7 @@
 	memcpy(diskname, p, len);
 	diskname[len] = 0;
 }
+#endif /* (defined(__i386__) || defined(__x86_64__)) && !HAVE_NBTOOL_CONFIG_H */

 static void
 get_ptn_alignmemt(void)
@@ -1258,7 +1259,6 @@
 	/* Allright, allright, make a stupid guess.. */
 	intuit_translated_geometry();
 }
-#endif /* (defined(__i386__) || defined(__x86_64__)) && !HAVE_NBTOOL_CONFIG_H */

 #ifdef BOOTSEL
 daddr_t

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Wed, 23 Dec 2009 18:51:25 +0000
State-Changed-Why:
fixed


From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42500 CVS commit: src/sbin/fdisk
Date: Wed, 23 Dec 2009 18:50:40 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Wed Dec 23 18:50:40 UTC 2009

 Modified Files:
 	src/sbin/fdisk: fdisk.c

 Log Message:
 Put #endif in correct place - fixes PR/42500
 Update usage() for -A, and rename one of the variables for clarity.


 To generate a diff of this commit:
 cvs rdiff -u -r1.129 -r1.130 src/sbin/fdisk/fdisk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.