Put #endif in correct place - fixes PR/42500 Update usage() for -A, and rename one of the variables for clarity.